--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "build:dev": "vite build --mode development",
-    "lint": "eslint .",
-    "preview": "vite preview"
+  "dev": "vite",
+  "build": "vite build",
+  "build:dev": "vite build --mode development",
+  "build:prod": "vite build --mode production",
+  "lint": "eslint .",
+  "preview": "vite preview"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
