--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dev": "vite",
   "build": "vite build",
   "build:dev": "vite build --mode development",
-  "build:prod": "vite build --mode production",
+  "build:prod": "vite build --mode production && node scripts/postbuild-rewrite-assets.js",
   "lint": "eslint .",
   "preview": "vite preview"
   },
