--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build React app
-        run: npm run build:prod
+        run: npm run build:preprod
 
       - name: Deploy to BunnyCDN Storage via HTTP API
         env:
