--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dev": "vite",
   "build": "vite build",
   "build:dev": "vite build --mode development",
-  "build:prod": "vite build --mode production && node scripts/postbuild-rewrite-assets.cjs",
+  "build:preprod": "vite build --mode preprod && node scripts/postbuild-rewrite-assets.cjs",
+  "build:prod": "vite build --mode production",
   "lint": "eslint .",
   "preview": "vite preview"
   },
